--- a/src/assets/less/article.less
+++ b/src/assets/less/article.less
@@ -72,14 +72,6 @@ div.content{
         padding-bottom: 10px;
         border-bottom: 1px solid #eee;
       }
-      blockquote{
-        margin: 30px;
-        padding: 15px 20px;
-        font-size: 16px;
-        color: #999;
-        border-left: 5px solid #eee;
-        user-select: none;
-      }
       p{
         margin-bottom: 20px;
         /*允许对长的不可分割的单词进行分割并换行到下一行。*/
@@ -87,7 +79,7 @@ div.content{
         /*规定非中日韩文本的换行规则*/
         word-break: break-word;
         /*文本开头空2em*/
-        text-indent:2em;
+        //text-indent:2em;
         line-height: 22px;
       }
     }
